cargo-features = ["per-package-target"]

[package]
name = "my-main-crate"
version = "0.0.0"
edition = "2021"
authors = ["Tony Giorgio <tony@mutinywallet.com>"]
forced-target = "wasm32-unknown-unknown"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
my-rust-crate = { path = "../my-rust-crate" }

wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4.38"
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
wasm-logger = "0.2.0"
log = "0.4.17"
web-sys = { version = "0.3.60", features = ["console"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.33"
web-sys = { version = "0.3.65", features = ["console"] }
js-sys = "0.3.65"

[features]
default = []

[package.metadata.wasm-pack.profile.release]
wasm-opt = true
